@@ -11,10 +11,14 @@ features: [
 url: "https://googledrive.com/host/0B3fBvzttpiiSRnQ0SExzX3JjdFE/"
 
 [git]
-url: "https://code.google.com/p/libevtx/"
+url: "https://github.com/libyal/libevtx.git"
+
+[development]
+main_object: "file"
+main_object_filename: "Application.Evtx"
 
 [tests]
-features: ["valgrind"]
+features: ["profiles", "valgrind"]
 profiles: ["libevtx", "pyevtx", "evtxinfo", "evtxexport", "evtxexport_xml"]
 example_filename1: "System.Evtx"
 example_filename2: "Application.Evtx"
