@@ -203,7 +203,7 @@ To have other code to determine if libevtx was compiled with libbfio support it 
 
 .Sh BUGS
 Please report bugs of any kind to <joachim.metz@gmail.com> or on the project website:
-http://code.google.com/p/libevtx/
+https://github.com/libyal/libevtx/
 .Sh AUTHOR
 These man pages were written by Joachim Metz.
 .Sh COPYRIGHT
