@@ -78,6 +78,7 @@ Recovery:
 
 20140929
 * removed README.macosx
+* changes for project site move
 
 20140901
 * bug fix in Python-bindings
